<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verde_fondo"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".actividades.LoginActivity">

    <ImageView
        android:layout_marginTop="60dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/ic_launcher_foreground" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/gris"
        app:boxStrokeColor="@color/purple_200"
        android:hint="@string/email"
        android:layout_marginTop="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">>

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/gris"
            android:backgroundTint="@android:color/transparent"
            android:hint="" /> <!-- Deja el hint vacío en el EditText para que el TextInputLayout muestre el hint -->
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/gris"
        app:boxStrokeColor="@color/purple_200"
        android:hint="@string/password"
        android:layout_marginTop="18dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">


        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:textColor="@color/gris"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:hint=""
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/verde_botones"
        android:text="@string/login_button"
        android:textColor="@color/blanco"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:id="@+id/textViewForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="end"
        android:text="@string/forgot_password"
        android:textColor="@color/verde_oscuro" />

    <TextView

        android:id="@+id/textViewRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/verde_oscuro" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:gravity="center"
        android:text="@string/copyright"
        android:textColor="@color/verde_oscuro" />

</LinearLayout>
